--- a/less/index.less
+++ b/less/index.less
@@ -2,7 +2,8 @@
 
 @import "variables";
 @import "mixins";
-@import "reset";
+@import "../css/normalize.css";
+
 @import "general";
 @import "navigation";
 @import "main";
