--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,11 @@
 @import "../css/normalize.css";
+html {
+  font-size: 62.5%;
+}
 body {
   color: #444444;
+  font-family: 'Raleway', sans-serif;
+  font-size: 1.5rem;
 }
 a {
   color: #444444;
