--- a/less/general.less
+++ b/less/general.less
@@ -1,6 +1,12 @@
 
+html {
+    font-size: 62.5%;
+}
+
 body {
     color: @body-font-color;
+    font-family: 'Raleway', sans-serif;
+    font-size: 1.5rem;
 }
 
 
