--- a/less/variables.less
+++ b/less/variables.less
@@ -4,7 +4,9 @@
 // ---------------------------------------------------
 
 // Colors
+
 @color-gray: #444444;
+@color-light-gray: #dddddd;
 @color-blue: #3464eb;
 
 
@@ -12,3 +14,8 @@
 
 @link-font-color: @color-gray;
 @link-hover-font-color: @color-blue;
+
+
+// Sizes
+
+@basic-gutter: 3rem;
