Add styles for headings

--- a/less/general.less
+++ b/less/general.less
@@ -20,3 +20,30 @@ a {
         color: @link-hover-font-color;
     }
 }
+
+
+// Headings 
+
+h1, h2, h3, h4, h5 {
+    font-weight: bold;
+}
+
+h1 {
+    font-size: 6rem;
+}
+
+h2 {
+    font-size: 4.5rem;
+}
+
+h3 {
+    font-size: 3rem;
+}
+
+h4 {
+    font-size: 2rem;
+}
+
+h5 {
+    font-size: 1rem;
+}
