--- a/css/index.css
+++ b/css/index.css
@@ -14,6 +14,28 @@ a {
 a:hover {
   color: #3464eb;
 }
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-weight: bold;
+}
+h1 {
+  font-size: 6rem;
+}
+h2 {
+  font-size: 4.5rem;
+}
+h3 {
+  font-size: 3rem;
+}
+h4 {
+  font-size: 2rem;
+}
+h5 {
+  font-size: 1rem;
+}
 header {
   border-bottom: 1px solid #dddddd;
   margin-bottom: 3rem;
