--- a/less/cta.less
+++ b/less/cta.less
@@ -3,10 +3,17 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
+    color: white;
     min-height: 30rem;
 
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding-top: @basic-gutter * 2;
+    padding-bottom: @basic-gutter * 2;
+
+    h2 {
+        text-align: center;
+    }
 }
