Create mixins smooth-transition, create-button. Add styles for buttons

--- a/less/variables.less
+++ b/less/variables.less
@@ -15,7 +15,11 @@
 @link-font-color: @color-gray;
 @link-hover-font-color: @color-blue;
 
+@button-background-color: white;
+@button-font-color: @body-font-color;
+
 
 // Sizes
 
 @basic-gutter: 3rem;
+@button-border-radius: 0.5rem;
