--- a/css/index.css
+++ b/css/index.css
@@ -36,6 +36,20 @@ h4 {
 h5 {
   font-size: 1rem;
 }
+/* Buttons */
+.btn {
+  background-color: white;
+  border-radius: 0.5rem;
+  color: #444444;
+  text-decoration: none;
+  line-height: 4rem;
+  padding: 0 2rem;
+  transition: background-color 0.4s ease;
+}
+.btn:hover {
+  background-color: #e6e6e6;
+  color: #444444;
+}
 header {
   border-bottom: 1px solid #dddddd;
   margin-bottom: 3rem;
