Create add-border mixin. Add styles for artist block on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -79,7 +79,25 @@ header nav a.active {
   justify-content: center;
   padding-top: 6rem;
   padding-bottom: 6rem;
+  margin-bottom: 3rem;
 }
 #cta h2 {
   text-align: center;
+}
+#artist {
+  display: flex;
+  flex-direction: column;
+  padding-top: 3rem;
+  margin-left: 3rem;
+  margin-right: 3rem;
+  border-top: 1px solid #dddddd;
+}
+#artist .artist-item {
+  margin-bottom: 3rem;
+}
+#artist .artist-item a {
+  display: block;
+}
+#artist .artist-item a img {
+  width: 100%;
 }
