--- a/less/cta.less
+++ b/less/cta.less
@@ -10,8 +10,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
     padding-top: @basic-gutter * 2;
     padding-bottom: @basic-gutter * 2;
+    margin-bottom: @basic-gutter;
 
     h2 {
         text-align: center;
