Use add-border mixin in header

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,8 +1,8 @@
 
 
 header {
-    border-bottom: 1px solid @color-light-gray;
     margin-bottom: @basic-gutter;
+    .add-border(bottom);
 
     nav {
         display: flex;
