--- a/less/artist.less
+++ b/less/artist.less
@@ -5,6 +5,16 @@
     margin-left: @basic-gutter;
     margin-right: @basic-gutter;
     .add-border(top);
+
+    @media @tablet {
+        flex-direction: row;
+        justify-content: space-between;
+
+        .artist-item {
+            width: 45%;
+            margin-right: @basic-gutter;
+        }
+    }
     
     .artist-item {
         margin-bottom: @basic-gutter;
