--- a/less/variables.less
+++ b/less/variables.less
@@ -25,3 +25,9 @@
 
 @basic-gutter: 3rem;
 @button-border-radius: 0.5rem;
+
+
+// Breakpoints
+
+@tablet: ~"(min-width: 768px)";
+@desktop: ~"(min-width: 1024px)";
