--- a/less/artist.less
+++ b/less/artist.less
@@ -19,11 +19,12 @@
     .artist-item {
         margin-bottom: @basic-gutter;
 
-        a {
+        .picture {
             display: block;
+            overflow: hidden;
 
             img {
-                width: 100%;
+                height: 32rem;
             }
         }
     }
