--- a/css/index.css
+++ b/css/index.css
@@ -54,17 +54,47 @@ header {
   margin-bottom: 3rem;
   border-bottom: 1px solid #dddddd;
 }
+@media (min-width: 1024px) {
+  header {
+    border: 0;
+  }
+}
 header nav {
   display: flex;
   flex-direction: column;
+}
+@media (min-width: 1024px) {
+  header nav {
+    margin-top: 3rem;
+    flex-direction: row;
+    justify-content: center;
+  }
 }
 header nav a {
   line-height: 6rem;
   text-decoration: none;
   text-align: center;
 }
+@media (min-width: 1024px) {
+  header nav a {
+    line-height: 1;
+    margin-right: 1.5rem;
+    padding-right: 1.5rem;
+    border-right: 1px solid #dddddd;
+  }
+  header nav a:last-child {
+    border-right: 0;
+  }
+}
 header nav a.active {
   font-weight: bold;
+}
+@media (min-width: 1024px) {
+  .container {
+    width: 1140px;
+    margin: 0 auto;
+    padding: 0 3rem;
+  }
 }
 #cta {
   background-image: url("../assets/home.png");
