--- a/less/cta.less
+++ b/less/cta.less
@@ -15,6 +15,12 @@
     padding-bottom: @basic-gutter * 2;
     margin-bottom: @basic-gutter;
 
+    .smooth-transition(opacity);
+
+    &:hover {
+        opacity: 0.8;
+    }
+
     h2 {
         text-align: center;
     }
