--- a/less/general.less
+++ b/less/general.less
@@ -53,3 +53,13 @@ h5 {
 .btn {
     .create-button();
 }
+
+/* Images */
+
+img {
+    .smooth-transition(opacity);
+    
+    &:hover {
+        opacity: 0.8;
+    }
+}
