Change div.bio to p and set leading for them

--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,9 @@ body {
   font-family: 'Raleway', sans-serif;
   font-size: 1.5rem;
 }
+p {
+  line-height: 1.6;
+}
 a {
   color: #444444;
   text-decoration: underline;
