--- a/less/general.less
+++ b/less/general.less
@@ -9,6 +9,10 @@ body {
     font-size: 1.5rem;
 }
 
+p {
+    line-height: 1.6;
+}
+
 
 // Links
 
@@ -58,7 +62,7 @@ h5 {
 
 img {
     .smooth-transition(opacity);
-    
+
     &:hover {
         opacity: 0.8;
     }
